<resources>
    <string name="app_name">Family</string>
    <string name="sos_msg_text">In case of Emergency, keep telling family members to contact me</string>
    <string name="sos">SOS</string>
    <string name="guard">GUARD</string>
    <string name="guard_msg_text">Open when you are on a potentially dangerous journey </string>
    <string name="security">Security</string>
    <string name="my_family">My Family</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>